basic push notification imlementation

--- a/webear/package.json
+++ b/webear/package.json
@@ -6,6 +6,7 @@
     "humanize-duration": "^3.12.1",
     "material-ui": "^0.20.0",
     "material-ui-datatables": "^0.18.2",
+    "push.js": "^1.0.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
